--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jotai": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "tone": "^14.7.77",
     "typescript": "^5.2.2",
