--- a/.eslintrc
+++ b/.eslintrc
@@ -59,7 +59,9 @@
         "tsx": "never",
         "mjs": "never"
       }
-    ]
+    ],
+    "arrow-body-style": "off",
+    "import/prefer-default-export": "off"
   },
   "settings": {
     "import/resolver": {
