--- a/.eslintrc
+++ b/.eslintrc
@@ -58,7 +58,8 @@
     "arrow-body-style": "off",
     "import/prefer-default-export": "off",
     "react/destructuring-assignment": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   },
   "settings": {
     "import/resolver": {
