--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "tone": "^14.7.77",
     "typescript": "^5.2.2",
     "web-vitals": "^3.5.0"
