--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-minimum-boilerplate",
-  "version": "0.1.0",
+  "name": "chord_explorer",
+  "version": "0.9.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
