Build for GitHub pages

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "build:pages": "pnpm build && cpx \"build/**/*\" \"docs\"",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
@@ -80,6 +81,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
+    "cpx": "^1.5.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.0.0",
