--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chord_explorer",
   "version": "0.9.0",
-  "homepage": "./",
+  "homepage": "https://ts5h.github.io/chord_explorer",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
