--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,13 @@
     "import/prefer-default-export": "off",
     "react/destructuring-assignment": "off",
     "react/jsx-props-no-spreading": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-floating-promises": [
+      "warn",
+      {
+        "ignoreIIFE": true
+      }
+    ]
   },
   "settings": {
     "import/resolver": {
