--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eject": "react-app-rewired eject",
     "lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
     "lint:fix": "eslint --fix --ext .jsx,.js,.tsx,.ts ./src",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
+    "format": "pnpm dlx @biomejs/biome format --write ./src"
   },
   "eslintConfig": {
     "extends": [
@@ -80,6 +80,7 @@
     }
   },
   "devDependencies": {
+    "@biomejs/biome": "1.3.1",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
@@ -94,7 +95,6 @@
     "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
     "react-app-rewire-alias": "^1.1.7",
     "sass": "^1.69.3"
   }
