--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-app-rewired": "^2.2.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
