--- a/package.json
+++ b/package.json
@@ -8,17 +8,12 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "framer-motion": "^11.0.5",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -30,33 +25,13 @@
     "web-vitals": "^3.5.2"
   },
   "scripts": {
-    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "dev": "react-app-rewired start",
     "deploy": "pnpm build && gh-pages -d build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "lint": "eslint --ext .jsx,.js,.tsx,.ts ./src",
-    "lint:fix": "eslint --fix --ext .jsx,.js,.tsx,.ts ./src",
-    "format": "pnpm dlx @biomejs/biome format --write ./src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "additional-rule": "warn"
-    },
-    "overrides": [
-      {
-        "files": [
-          "**/*.ts?(x)"
-        ],
-        "rules": {
-          "additional-typescript-only-rule": "warn"
-        }
-      }
-    ]
+    "lint": "biome check ./src",
+    "lint:fix": "biome check --write ./src",
+    "format": "pnpm lint:fix && biome format --write ./src",
+    "test": "vitest"
   },
   "browserslist": {
     "production": [
@@ -70,33 +45,13 @@
       "last 1 safari version"
     ]
   },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md": [
-      "prettier --write"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "devDependencies": {
-    "@biomejs/biome": "1.5.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "@biomejs/biome": "2.3.8",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "exact": "^1.0.1",
     "gh-pages": "^6.1.1",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "react-app-rewire-alias": "^1.1.7",
-    "sass": "^1.71.0"
+    "sass": "^1.71.0",
+    "vitest": "^4.0.15"
   }
 }
