--- a/package.json
+++ b/package.json
@@ -8,25 +8,19 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.16",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
     "framer-motion": "^11.0.5",
     "jotai": "^2.6.4",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.1",
-    "react-scripts": "5.0.1",
+    "react-router": "^7.10.1",
     "react-use": "^17.5.0",
-    "tone": "^14.7.77",
-    "typescript": "^5.3.3",
-    "web-vitals": "^3.5.2"
+    "tone": "^14.7.77"
   },
   "scripts": {
-    "build": "react-app-rewired build",
-    "dev": "react-app-rewired start",
+    "build": "vite build",
+    "dev": "vite dev",
     "deploy": "pnpm build && gh-pages -d build",
     "lint": "biome check ./src",
     "lint:fix": "biome check --write ./src",
@@ -49,10 +43,16 @@
     "@biomejs/biome": "2.3.8",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "exact": "^1.0.1",
     "gh-pages": "^6.1.1",
     "prettier": "^3.7.4",
     "sass": "^1.71.0",
+    "typescript": "^5.3.3",
+    "vite": "^7.2.6",
     "vitest": "^4.0.15"
   }
 }
