--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "homepage": "https://ts5h.github.io/chord_explorer",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "^5.2.8",
-    "framer-motion": "^11.0.5",
     "jotai": "^2.15.2",
+    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.2.1",
