--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jotai": "^2.15.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
+    "react-cookie-consent": "^9.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
